syntax = "proto3";

// PROTO COMPILER: `protoc --go_out=plugins=grpc:. ./proto/sfapi.proto`

// The "google/protobuf" import folder provides several types that
// are included with protoc. This one is a representation of
// timestamps/dates.
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "proto";

message Film {
  string id = 1;
  string title = 2;
  string director = 3;
  string producer = 4;
  google.protobuf.Timestamp release_date = 5;
}

service Starfriends {
  // Get a single Film by unique ID
  rpc GetFilm(GetFilmRequest) returns (GetFilmResponse);

  // Get a list of all Films
  rpc ListFilms(ListFilmsRequest) returns (ListFilmsResponse);

  // Creating new end-points : proto>store>server
  // Tests
  // - 1. Unit tests (store)
  // - 2. E2E

  rpc CreateFilm(CreateFilmRequest) returns (CreateFilmResponse);
  rpc UpdateFilm(UpdateFilmRequest) returns (UpdateFilmResponse);
  rpc DeleteFilm(DeleteFilmRequest) returns (google.protobuf.Empty);
}

message GetFilmRequest {string id = 1;}
message GetFilmResponse {Film film = 1;}

message ListFilmsRequest {
  // no arguments for listing films
  // TODO(nruault): Can I use protobuf.Empty here?
}
message ListFilmsResponse {repeated Film films = 1;}

message CreateFilmResponse {Film film = 1;}
message CreateFilmRequest {Film film = 1;}

message DeleteFilmRequest {string id = 1;}

message UpdateFilmRequest {Film film = 1;}
message UpdateFilmResponse {Film film = 1;}
